menu bar on click close

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ color: black;
   }
   
   .contact-container {
-    max-width: 800px;
+    width: 100%;
     margin: 0 auto;
     padding: 40px;
     border-radius: 15px;
